Fixed the blank bar bug on mobile phone

--- a/src/index.css
+++ b/src/index.css
@@ -49,4 +49,8 @@
   * {
     @apply transition-colors duration-200 ease-in-out;
   }
+
+  body {
+    @apply bg-primary
+  }
 }
